changes in api str

--- a/.env
+++ b/.env
@@ -1,5 +1,13 @@
-NODE_ENV=developme
-t PORT=
-000 MONGODB_URI=mongodb://mongo:27017/no
-http://localhost:8080,https://docker-frontend-zphv.onrender.com
-LOG_LEVEL=i
+ 
+
+# Server Port
+PORT=3000
+
+# MongoDB Connection URI
+MONGODB_URI=mongodb+srv://786hitmen:mohit@cluster0.axx7x4j.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+# Environment
+NODE_ENV=development
+
+# CORS Allowed Origins (comma-separated)
+CORS_ORIGINS=http://localhost:8080,http://localhost:8081,https://docker-frontend-zphv.onrender.com
