--- a/package.json
+++ b/package.json
@@ -1,32 +1,29 @@
 {
-  
-    "type": "module",
-  
-    "dependencies": {
-  
-      
-    "amqplib": "^0.10.5",
-  
-      
-    "body-parser": "^2.2.0",
-  
-      
+  "name": "notes-api",
+  "version": "1.0.0",
+  "type": "module",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "jest",
+    "lint": "eslint src/",
+    "lint:fix": "eslint src/ --fix"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "mongoose": "^7.5.0",
     "cors": "^2.8.5",
-  
-      
-    "dotenv": "^17.2.0",
-  
-      
-    "express": "^5.1.0",
-  
-      
-    "java-deserialization": "^0.1.0",
-  
-      
-    "java-deserializer": "^0.3.1",
-  
-      
-    "mongoose": "^8.16.3"
-  
-    }
+    "dotenv": "^16.3.1",
+    "helmet": "^7.0.0",
+    "compression": "^1.7.4",
+    "express-rate-limit": "^6.10.0",
+    "express-validator": "^7.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1",
+    "jest": "^29.6.2",
+    "eslint": "^8.47.0"
+  }
 }
+    
